--- a/Homepage random drop.html
+++ b/Homepage random drop.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Joseph's Homepage</title>
-    <link rel="shortcut icon" type="image/png" href="img/fav.png">
+    <link rel="shortcut icon" type="image/png" href="fav.png">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
