Update Homepage random drop.html

--- a/Homepage random drop.html
+++ b/Homepage random drop.html
@@ -157,6 +157,7 @@
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=36326" onclick="closeNav()">MATH313/413: Probability Theory</a>
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=37910" onclick="closeNav()">PHYS313: Solid State Physics</a>
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=37915" onclick="closeNav()">PHYS379: Theoretical Physics Group Project</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=37718" onclick="closeNav()">MATH328: Number Theory</a>
         </span></div>
 </div>
 </div>
