Update Homepage random drop.html

--- a/Homepage random drop.html
+++ b/Homepage random drop.html
@@ -158,6 +158,7 @@
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=37910" onclick="closeNav()">PHYS313: Solid State Physics</a>
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=37915" onclick="closeNav()">PHYS379: Theoretical Physics Group Project</a>
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=37718" onclick="closeNav()">MATH328: Number Theory</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=35584" onclick="closeNav()">The PLACE - Physics Students Conference</a>
           <a href="https://www.lancaster.ac.uk/student-and-education-services/exams-and-assessment/past-papers/" onclick="closeNav()">Past Papers</a>
         </span></div>
 </div>
