--- a/Ben Homepage.html
+++ b/Ben Homepage.html
@@ -225,6 +225,6 @@ function startDate() {
 </script>
 
 
-<div id ="offline" class="noSelect"><a href="https://portal.lancaster.ac.uk/portal/my-area/timetable"><img id="logo" alt="portal.lancaster.ac.uk" src="keele-uni-logo.png" style="width:3vw"></a></div> 
+<div id ="offline" class="noSelect"><a href="https://www.keele.ac.uk"><img id="logo" alt="portal.lancaster.ac.uk" src="keele-uni-logo.png" style="width:3vw"></a></div> 
 
 </body>
