Update Homepage random drop.html

--- a/Homepage random drop.html
+++ b/Homepage random drop.html
@@ -177,10 +177,13 @@
 
     <div><span id="year4" onclick="showMe4()" class="pointer"><a id="heady">Year 4</a></span>
         <span id="more4" style="display: inline" class="noSelect">
-            <a href="https://modules.lancaster.ac.uk/course/view.php?id=38516" onclick="closeNav()">PHYS452: MPhys Literature Review</a>
-            <a href="https://modules.lancaster.ac.uk/course/view.php?id=40556" onclick="closeNav()">PHYS411: Advanced Relativity and Gravity</a>
-            <a href="https://modules.lancaster.ac.uk/course/view.php?id=39198" onclick="closeNav()">MATH316/416: Metric Spaces</a>
-            <a href="https://www.lancaster.ac.uk/student-and-education-services/exams-and-assessment/past-papers/" onclick="closeNav()">Past Papers</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=38516" onclick="closeNav()">PHYS452: MPhys Literature Review</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=40556" onclick="closeNav()">PHYS411: Advanced Relativity and Gravity</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=39198" onclick="closeNav()">MATH316/416: Metric Spaces</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=40910" onclick="closeNav()">PHYS482: Quantum transport in Low Dimensional Nanostructures</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=39654" onclick="closeNav()">PHYS483: Quantum information processing</a>
+          <a href="https://modules.lancaster.ac.uk/course/view.php?id=39275" onclick="closeNav()">MATH317/417 Hilbert Spaces</a>
+          <a href="https://www.lancaster.ac.uk/student-and-education-services/exams-and-assessment/past-papers/" onclick="closeNav()">Past Papers</a>
         </span></div>
 </div>
 </div>
@@ -269,7 +272,7 @@ function startDate() {
 
   let month = months[d.getMonth()];
   document.getElementById("day").innerHTML = day + " " + date + addon + " " + month;
-  document.getElementById("day").style.fontSize = "3.7vw"
+  document.getElementById("day").style.fontSize = "3.5vw"
   document.getElementById("day").style.marginTop = "3vh"
 
   if ((date == 25)&(month == "September")){
