--- a/Homepage random drop.html
+++ b/Homepage random drop.html
@@ -177,6 +177,7 @@
 
     <div><span id="year4" onclick="showMe4()" class="pointer"><a id="heady">Year 4</a></span>
         <span id="more4" style="display: inline" class="noSelect">
+            <a href="https://modules.lancaster.ac.uk/course/view.php?id=40557" onclick="closeNav()">PHYS451: MPhys Project</a>
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=38516" onclick="closeNav()">PHYS452: MPhys Literature Review</a>
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=40556" onclick="closeNav()">PHYS411: Advanced Relativity and Gravity</a>
           <a href="https://modules.lancaster.ac.uk/course/view.php?id=39198" onclick="closeNav()">MATH316/416: Metric Spaces</a>
