Update Homepage random drop.html

--- a/Homepage random drop.html
+++ b/Homepage random drop.html
@@ -54,7 +54,8 @@
     var bgImage = 'https://source.unsplash.com/1600x900/?landscape;dark'
     function back() {
         if (navigator.onLine) {
-            document.body.style.cssText+=`background-image:url(${bgImage})`;
+            //document.body.style.cssText+=`background-image:url(${bgImage})`;
+            change();
             
           } 
         else {
